--- a/src/SelectionCard.css
+++ b/src/SelectionCard.css
@@ -19,11 +19,26 @@
     margin-bottom: .3em;
   }
 
-  .module-bar {
+  .module-bar {  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
+    color: #FFFFFF;
   }
+
   .module-name {
     font-size: 1.15em;
+  }
+  
+    .underline {
+        margin-top: 0;
+    }
+
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .divider {
