--- a/src/SmallCard.css
+++ b/src/SmallCard.css
@@ -6,7 +6,7 @@
     border-radius: 4px;
     padding: .3em 1em;
     margin: 1em;
-    background-color: #2D2D2D;
+    background-color: #2f2f2f;
     color: #FFFFFF;
     overflow: hidden;
   }
